# HaskellProblem10

./: README.md  problem10.cabal
app/: Main.hs
src/: Primes.hs
test/: Spec.hs
