name:                problem10
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/problem10#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Primes
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable problem10-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , problem10
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

test-suite problem10-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , problem10
                     , QuickCheck >= 2.9.2
                     , hspec >= 2.4.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/problem10
